implement new result endpoint to retrieve all contents with like_status of user if if user interacted with content already
