# storage/api-docs/api-docs.json
@@ -369,6 +369,35 @@
                 }
             }
         },
+        "/api/result": {
+            "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "summary": "Endpoint to retrieve the contents to populate the result page (Swipe View)",
+                "tags": [
+                    "Result"
+                ],
+                "parameters": [
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "unauthorized"
+                    },
+                    "422": {
+                        "description": "invalid input"
+                    },
+                    "500": {
+                        "description": "server error"
+                    }
+                }
+            }
+        },
         "/api/fiuselist": {
             "get": {
                 "security": [
